2.2.3 (2017-06-XX)
  * By default, set serialize.output to TRUE on Windows and FALSE otherwise
    so that Windows users also see stack traces and output be default.
  * Added rudimentary support for tab completion for methods on Scala
    references.
  * Suppress default printing of 'scalap' results (which is chatty and are
    often unavailable).  Make 'scalap' work with Scala references.

2.2.2 (2017-05-24)
  * Improved behavior for packages that depend on rscala, including adding
    the .rscalaPackageUnload function to spin down the instance of
    the Scala interpreter/compiler started by the .rscalaPackage function.
  * Moved example to \donttest instead of \dontrun.

2.2.1 (2017-05-24)
  * Never released.

2.2.0 (2017-05-23)
  * Vectors of length one are treated as scalar unless wrapped by the I()
    function.  This new behavior is opposite of the previous behavior but
    consistent with the jsonlite and RJSONIO packages.
  * Added 'classpath.packages' argument to 'scala' function for easily using
    JARs for other packages.
  * Added 'rscala.scala.home' global option to provide another means to find
    the Scala home directory.
  * s$val(), s$.val(), and s$do() are reinstated (but not recommended unless
    you need the arguments to be variables instead of string literals).
  * Fixed bug by wrapping command.line.arguments by the shQuote function.

2.1.1 (2017-05-11)
  * Added functionality for depending packages to use Scala 2.10.x, 2.11.x, or
    2.12.x (rather than what version the developer is using).

2.1.0 (2017-05-08)
  * Scala function defined in R can now use the %!% and %.!% operators.  See
    examples.  The alternative s$def() mechanism is deprecated and will be
    removed.
  * Overhead in Scala functions can be reduced with the scalaOptimize
    function.
  * s$null() is deprecated in favor of the scalaNull function.
  * s$val() and s$.val() are deprecated in favor of quoted strings, if needed.